--- a/changelog.txt
+++ b/changelog.txt
@@ -13,5 +13,7 @@ MP : min cost 8, max cost 16, step 1
 Damage : min cost 12, max cost 28, step 2
 Attack : min cost 40, max cost 56, step 2
 
+2.1.1
 
-Todo: remove Rav_XP_hp_amount if not needed
+Removed Rav_XP_hp_amount and similar if not needed
+Updated addon server description
