--- a/changelog.txt
+++ b/changelog.txt
@@ -35,3 +35,8 @@ HP : default cost from 6 to 8
 2.4.0
 
 New option to only allow upgrades to units that do not have regular advancements
+
+2.4.1
+
+Update deprecated code
+Drain filter now considers all drains-type specials
